MicroserviceWildflySwarm/deployment-green.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${JOB_NAME}-container
  labels:
    app: ${JOB_NAME}
spec:
  selector:
    matchLabels:
      app: ${JOB_NAME}
  replicas: 2
  template:
    metadata:
      labels:
        app: ${JOB_NAME}
    spec:
      containers:
      - name: ${JOB_NAME}-container
        image: registry.hub.docker.com/laurowag/${JOB_NAME}:${BRANCH}
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
