MicroserviceWildflySwarm/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${JOB_NAME}-${BRANCH}
  labels:
    app: ${JOB_NAME}-${BRANCH}
spec:
  selector:
    matchLabels:
      app: ${JOB_NAME}-${BRANCH}
  replicas: ${REPLICAS}
  template:
    metadata:
      labels:
        app: ${JOB_NAME}-${BRANCH}
    spec:
      containers:
      - name: ${JOB_NAME}-${BRANCH}
        image: ${DOCKER_REGISTRY_SERVER}/${DOCKER_REGISTRY_USER}/${JOB_NAME}:${BRANCH}.${BUILD_NUMBER}
        args:
        - /server
        livenessProbe:
          httpGet:
            path: /${BRANCH}
            port: 8080            
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /${BRANCH}
            port: 8080            
          initialDelaySeconds: 30
          periodSeconds: 30
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
