MicroserviceWildflySwarm/kubernetes.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: testes-container
  labels:
    app: testes
spec:
  selector:
    matchLabels:
      app: testes
  replicas: 3
  template:
    metadata:
      labels:
        app: testes
    spec:
      containers:
      - name: testes-container
        image: registry.hub.docker.com/laurowag/testes:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
