MicroserviceWildflySwarm/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${JOB_NAME}
  namespace: ${BRANCH}
spec:
  selector:
    app: ${JOB_NAME}-${BRANCH}
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
